# medical-image-processor

./: CMakeLists.txt  main.cpp
